# breadcrumb

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.cfg
breadcrumb/: CMakeLists.txt  cli.py  graph.py  graph_builder.py  graph_types.py  helpers.py  launch_parser.py  node_interface.py  package.xml  serialization.py
breadcrumb/breadcrumb/: cli.py  graph.py  helpers.py  node_interface.py  serialization.py
breadcrumb/breadcrumb/tests/: test_graph.py  test_serialization.py
breadcrumb/interfaces/: relay_node.yaml
breadcrumb_example/: CMakeLists.txt  README.md  package.xml  produce_graphs.sh
breadcrumb_example/config/: params.yaml
breadcrumb_example/interfaces/: external_camera.yaml  robot_state_publisher.yaml
breadcrumb_example/launch/: _control.launch.py  _hardware.launch.py  _ui.launch.py  cartpole_simulator.launch.py  full_system.launch.py  processing.launch.py  sensors.launch.py
breadcrumb_example/nodes/cartpole_controller/: cartpole_controller.cpp  cartpole_controller.hpp  interface.yaml
breadcrumb_example/nodes/cartpole_simulator/: cartpole_simulator.cpp  cartpole_simulator.hpp  interface.yaml
breadcrumb_example/nodes/cartpole_ui/: cartpole_ui.py  interface.yaml
breadcrumb_example/nodes/cartpole_ui/templates/: dashboard.html
breadcrumb_example/nodes/controller/: controller.cpp  controller.hpp  interface.yaml
breadcrumb_example/nodes/data_processor/: data_processor.cpp  data_processor.hpp  interface.yaml
breadcrumb_example/nodes/monitor_node/: interface.yaml  monitor_node.py
breadcrumb_example/nodes/sensor_driver/: interface.yaml  sensor_driver.cpp  sensor_driver.hpp
breadcrumb_example/ros_graphs/: graph_full_system.dot  graph_group_control.dot  graph_group_hardware.dot  graph_toplevel.dot
breadcrumb_example/rviz/: cartpole_simulator.rviz
breadcrumb_example/scripts/: compute_lqr_gains.py
breadcrumb_example/urdf/: cartpole.urdf
breadcrumb_example/web_templates/: dashboard.html
breadcrumb_example_interfaces/: CMakeLists.txt  package.xml
breadcrumb_example_interfaces/action/: TrackPosition.action
interfaces/: throttle_node.yaml
