<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>breadcrumb_example</name>
  <version>0.0.0</version>
  <description>Example package demonstrating cake, clingwrap, and breadcrumb integration</description>
  <maintainer email="info@greenforgelabs.com.au">Alistair English</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cake</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>clingwrap</depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
