<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>breadcrumb_example_interfaces</name>
  <version>0.0.0</version>
  <description>Custom action interfaces for breadcrumb_example</description>
  <maintainer email="info@greenforgelabs.com.au">Alistair English</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>cake</buildtool_depend>

  <!-- msg dependencies go here (if required) -->

  <!-- important! this must be included in all interface package xmls -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
